# router/APIRouting.go
@@ -3,6 +3,7 @@ package router
 import (
 	"database/sql"
 	"denitiawan/research-swagger-gomod-gin/module/auth"
+	"denitiawan/research-swagger-gomod-gin/module/category"
 	"denitiawan/research-swagger-gomod-gin/module/product"
 	"denitiawan/research-swagger-gomod-gin/module/user"
 	"github.com/gin-gonic/gin"
@@ -18,5 +19,6 @@ func APIRouting(db *sql.DB, basePath *gin.RouterGroup) {
 	auth.APIAuth(db, basePath, validate)
 	user.APIUser(db, basePath, validate)
 	product.APIProduct(db, basePath, validate)
+	category.APICategory(db, basePath, validate)
 
 }
